# Tracelet

./: Dockerfile  README.md  create_tables.py  docker-compose.yml  init_db.ps1  main.py  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py  utils.py
app/routes/: __init__.py  entities.py  events.py  links.py  misc.py  trace.py  tracking.py  tracking_pdf.py
migrations/: env.py
websql/: __init__.py  api.py  main.py  settings.py  templating.py
websql/routes/: dashboard.py  entities.py  health.py  trace.py  tracking.py
websql/static/: style.css
websql/templates/: base.html  dashboard.html  entities.html  entity_detail.html  trace.html  tracking.html  tracking_add_event.html  tracking_create.html  tracking_detail.html  tracking_search.html
