[project]
name = "tracelet"
version = "1.0.0"
description = "Its a tracking app that tracks packages cuz dpd tracking sucks"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.3",
    "django-qrcode>=0.3",
    "fastapi==0.128.1",
    "jinja2==3.1.6",
    "psycopg2-binary==2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
    "sqlalchemy==2.0.46",
    "tomli>=2.4.0",
    "uvicorn>=0.40.0",
]
